--- a/src/main/resources/service.yaml
+++ b/src/main/resources/service.yaml
@@ -1,102 +1,51 @@
-openapi: "3.0.0"
+openapi: 3.0.0
 info:
   version: 1.0.0
-  title: Swagger Petstore
-  license:
-    name: MIT
-servers:
-  - url: http://petstore.swagger.io/v1
+  title: My demo App
 paths:
-  /pets:
+  /api/methodes/{method}:
     get:
-      summary: List all pets
-      operationId: listPets
-      tags:
-        - pets
+      summary: Get method info
+      operationId: getMethod
       parameters:
-        - name: limit
-          in: query
-          description: How many items to return at one time (max 100)
-          required: false
-          schema:
-            type: integer
-            format: int32
-      responses:
-        '200':
-          description: An paged array of pets
-          headers:
-            x-next:
-              description: A link to the next page of responses
-              schema:
-                type: string
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Pets"
-        default:
-          description: unexpected error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
-    post:
-      summary: Create a pet
-      operationId: createPets
-      tags:
-        - pets
-      responses:
-        '201':
-          description: Null response
-        default:
-          description: unexpected error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
-  /pets/{petId}:
-    get:
-      summary: Info for a specific pet
-      operationId: showPetById
-      tags:
-        - pets
-      parameters:
-        - name: petId
+        - name: method
           in: path
           required: true
-          description: The id of the pet to retrieve
           schema:
             type: string
       responses:
         '200':
-          description: Expected response to a valid request
+          description: An method
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Pets"
+                $ref: '#/components/schemas/Method'
         default:
           description: unexpected error
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Error"
+                $ref: '#/components/schemas/Error'
 components:
   schemas:
-    Pet:
+    Method:
       required:
         - id
         - name
+        - image
+        - figurativeMark
+        - figurativeMarkSmall
       properties:
         id:
-          type: integer
-          format: int64
-        name:
           type: string
-        tag:
+        param:
           type: string
-    Pets:
-      type: array
-      items:
-        $ref: "#/components/schemas/Pet"
+        image:
+          type: string
+        figurativeMark:
+          type: string
+        figurativeMarkSmall:
+          type: string
     Error:
       required:
         - code
